# silica-demo

./: Cargo.toml  build.rs  build.sh  cortex-m3.json  debug.sh  layout.ld  openocd-stm32f207
.cargo/: config
linker/: cm3.ld
src/: main.rs
